# Python-Flask-skeleton

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY_REQUIREMENTS.md  README.md  api.wsgi  dev-requirements.in  dev-requirements.txt  env.yml  environment.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: main.yml
python_module/: api.py  python_module.py
python_package/: __init__.py  api.py  config.py  main.py
python_package/utils/: api_doc.py  common.py  logger.py
tests/integration/: test_api.py
tests/integration_tests/: test_module.py
tests/unit/: test_main.py
