[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "python_module"
author = "Germán Aragón Caminero"
author-email = "german.aragon@unican.es"
home-page = "https://github.com/aragong/Python-skeleton"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"

